code skeleton from jenkins